[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/prefabs/Bowling/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://VHS.theme" type="Theme" id=3]
[ext_resource path="res://scenes/prefabs/PauseMenu/PauseMenu.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.565101
height = 1.82681

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.05, 0.05, 1 )

[node name="Character" type="KinematicBody"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.716666, -0.0904972 )
current = true
fov = 90.0
far = 250.0

[node name="InteractionArea" type="Area" parent="Camera"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Camera/InteractionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.01931 )
shape = SubResource( 2 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
theme = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="InteractionActionLabel" type="Label" parent="UI/CenterContainer"]
margin_left = 640.0
margin_top = 347.0
margin_right = 640.0
margin_bottom = 373.0

[node name="PauseMenu" parent="." instance=ExtResource( 4 )]

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.45
autostart = true

[connection signal="area_entered" from="Camera/InteractionArea" to="." method="_on_InteractionArea_area_entered"]
[connection signal="area_exited" from="Camera/InteractionArea" to="." method="_on_InteractionArea_area_exited"]
[connection signal="timeout" from="StepTimer" to="." method="_on_StepTimer_timeout"]
